2010-11-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Fixed #3093447.

2010-11-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (setIncludePath): fixed uninitialized target

2010-11-03 Borut Razem <borut.razem AT siol.net>

	* device/include/pic14/sdcc-lib.h:
	  directories */pic renamed to */pic14

2010-11-02 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added peepholes 248.n to 248.p
	  optimizing and/or/xor to xdata arrays

2010-11-02 Borut Razem <borut.razem AT siol.net>

	* device/include/Makefile.in, device/non-free/include/Makefile.in,
	  device/lib/Makefile.in, device/lib/pic14/configure,
	  device/lib/pic14/configure.in, device/lib/pic14/Makefile.common.in,
	  device/lib/pic16/aclocal.m4, device/lib/pic16/configure,
	  device/lib/pic16/configure.ac, device/non-free/lib/Makefile.in,
	  device/non-free/lib/pic14/configure,
	  device/non-free/lib/pic14/configure.in,
	  device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/lib/pic14/libdev/mkall.sh,
	  device/non-free/lib/pic14/Makefile.common.in,
	  device/non-free/lib/pic16/configure,
	  device/non-free/lib/pic16/configure.ac:
	  directories */pic renamed to */pic14

2010-11-01 Borut Razem <borut.razem AT siol.net>

	* Small Device C Compiler 3.0.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.0.1
	* device/include/pic, device/include/asm/pic, device/lib/pic,
	  device/non-free/include/pic, device/non-free/lib/pic,
	  sdcc/src/pic: renamed to */pic14
	* configure, configure.in, regression/Makefile, src/SDCCmain.c,
	  device/include/Makefile.in, device/non-free/include/Makefile.in,
	  support/regression/ports/pic14/spec.mk, support/scripts/sdcc.nsi,
	  device/non-free/lib/Makefile.in, device/lib/Makefile.in,
	  sdcc.dsw, src/pic14/pic14.dsp, src/pic14/pic14a.dsp, src/src.dsp:
	  directories */pic renamed to */pic14
	* src/pic16/gen.c: _naked renamed to __naked
	* support/scripts/repack_release.sh: